--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/edit-revision.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/edit-revision.html.twig
@@ -33,7 +33,7 @@
 				<div class="btn-group">
 					{{ form_widget(form.save) }}
 					<div class="btn-group">
-						<button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
+						<button type="button" class="btn btn-default btn-sm dropdown-toggle" data-bs-toggle="dropdown">
 							<span class="fa fa-ellipsis-h"></span>
 						</button>
 						<ul class="dropdown-menu">
