--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/i18n/index.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/i18n/index.html.twig
@@ -58,7 +58,7 @@
 								<td class="">{{ loop.index+((page-1)*paging_size) }}.</td>
 								<td class="">{{ i18n.identifier }}</td>
 								<td>
-									<a data-toggle="modal" data-target="#Id{{ i18n.id }}Modal" class="btn btn-sm btn-success">
+									<a data-bs-toggle="modal" data-bs-target="#Id{{ i18n.id }}Modal" class="btn btn-sm btn-success">
 										<i class="fa fa-eye"></i>&nbsp;
 										{{ i18n.content|length }}
 									</a>
