--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/edit.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/edit.html.twig
@@ -98,7 +98,7 @@
                                     </h3>
                                     <a class="toggle-button float-end" role="button" data-bs-toggle="collapse"
                                        href="#mapping-info" aria-expanded="false" aria-controls="mapping-info"
-                                       data-toggle-contain="Hide <i class=&quot;fa fa-chevron-down&quot;></i>">
+                                       data-bs-toggle-contain="Hide <i class=&quot;fa fa-chevron-down&quot;></i>">
                                         Show <i class="fa fa-chevron-right"></i>
                                     </a>
                                 </div>
@@ -119,7 +119,7 @@
                                 </h3>
                                 <a class="toggle-button float-end" role="button" data-bs-toggle="collapse"
                                    href="#versioning" aria-expanded="false" aria-controls="versioning"
-                                   data-toggle-contain="Hide <i class=&quot;fa fa-chevron-down&quot;></i>">
+                                   data-bs-toggle-contain="Hide <i class=&quot;fa fa-chevron-down&quot;></i>">
                                     Show <i class="fa fa-chevron-right"></i>
                                 </a>
                             </div>
