--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/field.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/field.html.twig
@@ -27,7 +27,7 @@
 				<!-- /.box-body -->
 				<div class="card-footer text-end">
 					<div class="btn-group">
-						<button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-target="#edit_field_type_fieldType_modal_add">
+						<button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#edit_field_type_fieldType_modal_add">
 								<i class="fa fa-plus"></i> Subfield
 						</button>
 						{{ form_widget(form.save) }}
