--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/search-form-filter.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/search-form-filter.html.twig
@@ -144,11 +144,11 @@
 		{% endif %}
 		<div class="card-footer">
 			<div class="btn-group">
-				<a class="toggle-button {% if openSearchForm is not defined or not openSearchForm %}collapsed{% endif %} btn btn-primary btn-sm" role="button" data-toggle="collapse" href="#searchFormBoxBody" aria-expanded="{% if openSearchForm is not defined or not openSearchForm %}false{%else%}true{% endif %}" aria-controls="searchFormBoxBody">
+				<a class="toggle-button {% if openSearchForm is not defined or not openSearchForm %}collapsed{% endif %} btn btn-primary btn-sm" role="button" data-bs-toggle="collapse" href="#searchFormBoxBody" aria-expanded="{% if openSearchForm is not defined or not openSearchForm %}false{%else%}true{% endif %}" aria-controls="searchFormBoxBody">
 					<i class="fa fa-search"></i> Search form
 				</a>
 				{% if is_granted('ROLE_SUPER_ADMIN') and body is defined %}
-					<a class="toggle-button collapsed btn btn-primary btn-sm" role="button" data-toggle="collapse" href="#queryElasticsearchBoxBody" aria-expanded="false" aria-controls="queryElasticsearchBoxBody">
+					<a class="toggle-button collapsed btn btn-primary btn-sm" role="button" data-bs-toggle="collapse" href="#queryElasticsearchBoxBody" aria-expanded="false" aria-controls="queryElasticsearchBoxBody">
 						<i class="fa fa-eye"></i> Query
 					</a>
 				{% endif %}
