--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/filter/edit.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/filter/edit.html.twig
@@ -13,7 +13,7 @@
 
 {% block body %}
 
-    {% include "@EMSCore/filter/form.html.twig" with {
+    {% include "@EMSAdminUI/bootstrap5/filter/form.html.twig" with {
     	form: form,
     	label: 'Edit a Filter'|trans,
     } %}
