--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/i18n/edit.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/i18n/edit.html.twig
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block body %}
-    {% include "@EMSCore/i18n/form.html.twig" with {
+    {% include "@EMSAdminUI/bootstrap5/i18n/form.html.twig" with {
 		form: edit_form,
 		title: 'I18N edit',
 		action: 'Save',
