--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/notification/inboxRejected.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/notification/inboxRejected.html.twig
@@ -31,7 +31,7 @@
 					{% if notification.responseText|length > 0 %}
 
 						<!-- Button trigger modal -->
-						<button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#showRejectedMessageModal_{{ loop.index }}">
+						<button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#showRejectedMessageModal_{{ loop.index }}">
 							<i class="fa fa-commenting-o"></i>
 						</button>
 
