--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/gallery_view.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/gallery_view.html.twig
@@ -10,7 +10,7 @@
 
 	<div class="row">
     	<div class="col-md-12">
-            {% include "@EMSCore/elasticsearch/search-form-filter.html.twig" with {
+            {% include "@EMSAdminUI/bootstrap5/elasticsearch/search-form-filter.html.twig" with {
 				form: form,
 			} %}
 		</div>
@@ -78,7 +78,7 @@
     	                            {% elseif view.options.missingImageHash %}
                        				    {% set path = path('ems_asset_processor', {'hash':view.options.missingImageHash, 'processor': view.options.thumbnailAssetConfigIdentifier }) %}
     	                            {% endif %}
-                     				 <td data-target="#myCarousel" data-slide-to="{{ loop.index0 }}" >
+                     				 <td data-bs-target="#myCarousel" data-slide-to="{{ loop.index0 }}" >
                                       <img
                                       	src="{{ path }}"
                                       	alt="{% if view.options.imageAltFields and attribute(item._source, view.options.imageAltFields) is defined %}{{ attribute(item._source, view.options.imageAltFields) }}{% endif %}"
