--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/hierarchical_add_item.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/hierarchical_add_item.html.twig
@@ -3,10 +3,10 @@
 	<div class="box-header">
 		<div class="pull-right box-tools">
 			<div class="btn-group">
-            	<a href="{{ path('data.revisions', {type: key[0], ouuid:key[1]} ) }}" type="button" class="btn btn-primary btn-sm" data-toggle="tooltip" title="" data-original-title="{{ 'Revisions'|trans }}">
+            	<a href="{{ path('data.revisions', {type: key[0], ouuid:key[1]} ) }}" type="button" class="btn btn-primary btn-sm" data-bs-toggle="tooltip" title="" data-original-title="{{ 'Revisions'|trans }}">
               		<i class="fa fa-archive"></i>
              	</a>
-            	<a type="button" class="btn btn-default btn-sm remove-item" data-toggle="tooltip" title="" data-original-title="{{ 'Remove' }}">
+            	<a type="button" class="btn btn-default btn-sm remove-item" data-bs-toggle="tooltip" title="" data-original-title="{{ 'Remove' }}">
               		<i class="fa fa-trash"></i>
               	</a>
                 {% if contentType.name == view.contentType.name %}
@@ -26,7 +26,7 @@
 	</div>
 	{% if contentType.name == view.contentType.name %}
 		<ol style="display:none;">
-            {% include "@EMSCore/view/custom/hierarchical_item.html.twig" with {
+            {% include "@EMSAdminUI/bootstrap5/view/custom/hierarchical_item.html.twig" with {
         		parent: data,
             	view: view,
         	} %}
