--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/revision/json/json_menu_nested.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/revision/json/json_menu_nested.html.twig
@@ -243,13 +243,13 @@
 {% block modalSaveFooter %}
     <div class="pull-right">
         <button id="ajax-modal-submit" class="btn btn-sm btn-primary"><i class="fa fa-save"></i>&nbsp;Save</button>
-        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-sm btn-default" data-bs-dismiss="modal">Cancel</button>
     </div>
 {% endblock %}
 
 {% block modalFooterClose %}
     <div class="pull-left">
-        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-sm btn-default" data-bs-dismiss="modal">Close</button>
     </div>
 {% endblock %}
 
