--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/action/modal_import.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/action/modal_import.html.twig
@@ -7,5 +7,5 @@
 
 {% block footer %}
     <button id="ajax-modal-submit" class="btn btn-sm btn-primary">{{ 'contenttype.action.modal_import.submit'|trans }}</button>
-    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">{{ 'contenttype.action.modal_import.cancel'|trans }}</button>
+    <button type="button" class="btn btn-sm btn-default" data-bs-dismiss="modal">{{ 'contenttype.action.modal_import.cancel'|trans }}</button>
 {% endblock %}
