--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base.html.twig
@@ -165,7 +165,7 @@
 		  <div class="modal-dialog" role="document">
 		    <div class="modal-content">
 		      <div class="modal-header">
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 		        <h4 class="modal-title" id="myModalOutOfSync">
 							<strong>Out of sync</strong>
 				</h4>
@@ -186,7 +186,7 @@
 		  <div class="modal-dialog" role="document">
 		    <div class="modal-content">
 		      <div class="modal-header">
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 		        <h4 class="modal-title" id="myModalNotifications">
 							<strong>Notifications</strong>
 				</h4>
@@ -261,7 +261,7 @@
         <div class="progress progress-striped active" style="margin-bottom:0;"><div class="progress-bar" style="width: 100%"></div></div>
       </div>
 {#       <div class="modal-footer">#}
-{#         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>#}
+{#         <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>#}
 {#         <button type="button" class="btn btn-primary">Send message</button>#}
 {#       </div>#}
     </div>
