--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/components/json_menu_nested/template.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/components/json_menu_nested/template.twig
@@ -181,7 +181,7 @@
         {% if form is defined  %}
             <button id="ajax-modal-submit" class="btn btn-sm btn-primary"><i class="fa fa-save"></i>&nbsp;Save</button>
         {% endif %}
-        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-sm btn-default" data-bs-dismiss="modal">Cancel</button>
     </div>
 {%- endblock jmn_modal_footer -%}
 
