--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/components/media_library/modal.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/components/media_library/modal.html.twig
@@ -7,5 +7,5 @@
 
 {% block footerAddFolder %}
     <button id="ajax-modal-submit" class="btn btn-sm btn-primary">{{ 'media_library.folder.add.submit'|trans }}</button>
-    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">{{ 'media_library.folder.add.cancel'|trans }}</button>
+    <button type="button" class="btn btn-sm btn-default" data-bs-dismiss="modal">{{ 'media_library.folder.add.cancel'|trans }}</button>
 {% endblock %}
