--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
@@ -964,7 +964,7 @@
 				<div class="modal-dialog" role="document">
 					<div class="modal-content">
 						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal" aria-label="{{ 'fields.asset.close-modal'|trans }}"><span aria-hidden="true">&times;</span></button>
+							<button type="button" class="close" data-bs-dismiss="modal" aria-label="{{ 'fields.asset.close-modal'|trans }}"><span aria-hidden="true">&times;</span></button>
 							<h4 class="modal-title">{{ 'fields.asset.file-info'|trans }}</h4>
 						</div>
 						<div class="modal-body">
@@ -976,7 +976,7 @@
 							</div>
 						</div>
 						<div class="modal-footer">
-							<button type="button" class="btn btn-secondary" data-dismiss="modal">{{ 'fields.asset.close-modal'|trans }}</button>
+							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ 'fields.asset.close-modal'|trans }}</button>
 						</div>
 					</div>
 				</div>
@@ -1041,7 +1041,7 @@
 			  <div class="modal-dialog" role="document">
 				<div class="modal-content">
 				  <div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="{{ 'fields.asset.close-modal'|trans }}"><span aria-hidden="true">&times;</span></button>
+					<button type="button" class="close" data-bs-dismiss="modal" aria-label="{{ 'fields.asset.close-modal'|trans }}"><span aria-hidden="true">&times;</span></button>
 					<h4 class="modal-title" id="myModalLabel">{{ 'fields.asset.file-info'|trans }}</h4>
 				  </div>
 				  <div class="modal-body">
@@ -1052,7 +1052,7 @@
 					{{- form_widget(form) -}}
 				  </div>
 				  <div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-dismiss="modal">{{ 'fields.asset.close-modal'|trans }}</button>
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ 'fields.asset.close-modal'|trans }}</button>
 				  </div>
 				</div>
 			  </div>
@@ -1142,7 +1142,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-              	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              	<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         		<h4 class="modal-title" id="myModalLabel">{{ 'Asset options'|trans }}</h4>
               </div>
               <div class="modal-body">
@@ -1160,7 +1160,7 @@
 							{{ 'Extract content'|trans }}
 						</button>
 					{% endif %}
-                    <button type="button" class="btn btn-small btn-default " data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
+                    <button type="button" class="btn btn-small btn-default " data-bs-dismiss="modal"><i class="fa fa-close"></i> Close</button>
                 </div>
               </div>
             </div>
@@ -1233,7 +1233,7 @@
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         <h4 class="modal-title" id="myModalLabel">
                             Add a field to <strong>{{ form.vars.data.name }}</strong>
                         </h4>
@@ -1245,7 +1245,7 @@
                       <div class="modal-footer">
                         <div class="btn-group">
                             {{ form_widget(form.add) }}
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
+                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal"><i class="fa fa-close"></i> Close</button>
                         </div>
                       </div>
                     </div>
@@ -1261,7 +1261,7 @@
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         <h4 class="modal-title" id="myModalLabel">
                             Add a subfield to <strong>{{ form.vars.data.name }}</strong>
                         </h4>
@@ -1272,7 +1272,7 @@
                       <div class="modal-footer">
                         <div class="btn-group">
                             {{ form_widget(form.subfield) }}
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
+                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal"><i class="fa fa-close"></i> Close</button>
                         </div>
                       </div>
                     </div>
@@ -1282,7 +1282,7 @@
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         <h4 class="modal-title" id="myModalLabel">
                             Duplicate <strong>{{ form.vars.data.name }}</strong>
                         </h4>
@@ -1293,7 +1293,7 @@
                       <div class="modal-footer">
                         <div class="btn-group">
                             {{ form_widget(form.duplicate) }}
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
+                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal"><i class="fa fa-close"></i> Close</button>
                         </div>
                       </div>
                     </div>
@@ -1315,7 +1315,7 @@
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         <h4 class="modal-title" id="myModalLabel">
                             Options for the field <strong>{{ form.vars.data.name }}</strong> <small>({{ form.vars.data.type }})</small>
                         </h4>
@@ -1349,7 +1349,7 @@
                             </div>
                       </div>
                       <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal"><i class="fa fa-close"></i> Close</button>
                       </div>
                     </div>
                   </div>
@@ -1364,7 +1364,7 @@
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         <h4 class="modal-title" id="myModalReorderLabel">
                             Reorder fields in <strong>{{ form.vars.data.name }}</strong>
                         </h4>
