--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/i18n/index.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/i18n/index.html.twig
@@ -103,7 +103,7 @@
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal"
+						<button type="button" class="close" data-bs-dismiss="modal"
 							aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
