--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/notification/inboxRejected.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/notification/inboxRejected.html.twig
@@ -40,14 +40,14 @@
 						  <div class="modal-dialog" role="document">
 						    <div class="modal-content">
 						      <div class="modal-header">
-						        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 						        <h4 class="modal-title" id="showRejectedMessageModal_{{ loop.index }}_Label">Rejected message</h4>
 						      </div>
 						      <div class="modal-body">
 						      	{{ notification.responseText|raw }}
 						      </div>
 						      <div class="modal-footer">
-						        <button type="button" class="btn btn-default" data-dismiss="modal">
+						        <button type="button" class="btn btn-default" data-bs-dismiss="modal">
 						        	<i class="fa fa-close"></i>
 						        	Close
 					        	</button>
