--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/revision/task/ajax.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/revision/task/ajax.twig
@@ -172,13 +172,13 @@
 
 {% block modalFooterClose %}
     <div class="pull-left">
-        <button type="button" class="btn btn-sm btn-default task-icon-close" data-dismiss="modal">{{ 'task.close'|trans }}</button>
+        <button type="button" class="btn btn-sm btn-default task-icon-close" data-bs-dismiss="modal">{{ 'task.close'|trans }}</button>
     </div>
 {% endblock %}
 
 {% block modalFooterActions %}
     <div class="pull-left">
-        <button type="button" class="btn btn-sm btn-default task-icon-close" data-dismiss="modal">{{ 'task.close'|trans }}</button>
+        <button type="button" class="btn btn-sm btn-default task-icon-close" data-bs-dismiss="modal">{{ 'task.close'|trans }}</button>
     </div>
     {% if fromRevision == false %}
         <div class="pull-right">
@@ -201,7 +201,7 @@
 {% block modalCreateFooter %}
     <div class="pull-left">
         <button id="ajax-modal-submit" class="btn btn-sm btn-primary task-icon-create">{{ 'task.create.submit'|trans }}</button>
-        <button type="button" class="btn btn-sm btn-default task-icon-cancel" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-sm btn-default task-icon-cancel" data-bs-dismiss="modal">Cancel</button>
     </div>
 {% endblock %}
 
@@ -274,7 +274,7 @@
                     data-url="{{ path('ems_core_task_ajax_delete', {'revisionId': revisionId, 'taskId': task.id}) }}"
                     class="btn btn-sm btn-danger task-icon-delete">{{ 'task.delete.submit'|trans }}</button>
         {% endif %}
-        <button type="button" class="btn btn-sm btn-default task-icon-close" data-dismiss="modal">{{ 'task.close'|trans }}</button>
+        <button type="button" class="btn btn-sm btn-default task-icon-close" data-bs-dismiss="modal">{{ 'task.close'|trans }}</button>
     </div>
 {% endblock %}
 
@@ -285,7 +285,7 @@
 {% block modalDeleteFooter %}
     <div class="pull-left">
         <button id="ajax-modal-submit" class="btn btn-sm btn-danger task-icon-delete">{{ 'task.delete.submit'|trans }}</button>
-        <button type="button" class="btn btn-sm btn-default task-icon-cancel" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-sm btn-default task-icon-cancel" data-bs-dismiss="modal">Cancel</button>
     </div>
 {% endblock %}
 
