--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/notification/inboxToTreat.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/notification/inboxToTreat.html.twig
@@ -56,7 +56,7 @@
 
 					<td>
 						<div class="btn-group">
-							<button onclick="javascript: $('.item-to-treat').iCheck('uncheck'); $('#treat_notifications_notifications_{{ notification.id }}').iCheck('check'); return false;" type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#treatNotificationsModal">
+							<button onclick="javascript: $('.item-to-treat').iCheck('uncheck'); $('#treat_notifications_notifications_{{ notification.id }}').iCheck('check'); return false;" type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#treatNotificationsModal">
 							  <i class="fa fa-gear"></i> Treat
 							</button>
                             {% include '@EMSAdminUI/bootstrap5/elements/object-views-button.html.twig' with {
@@ -75,7 +75,7 @@
 		</div>
 	<div class="">
 		<div class="btn-group">
-			<button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#treatNotificationsModal">
+			<button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#treatNotificationsModal">
 			  <i class="fa fa-gear"></i> Treat selection
 			</button>
 		</div>
@@ -89,7 +89,7 @@
 	  <div class="modal-dialog" role="document">
 	    <div class="modal-content">
 	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	        <h4 class="modal-title" id="treatNotificationsModalLabel">Treat selected notifications</h4>
 	      </div>
 	      <div class="modal-body">
