--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base.html.twig
@@ -61,7 +61,7 @@
     <!-- Header Navbar -->
     <nav class="navbar navbar-static-top" role="navigation">
       <!-- Sidebar toggle button-->
-      <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button" id="sidebar-toggle-button">
+      <a href="#" class="sidebar-toggle" data-bs-toggle="push-menu" role="button" id="sidebar-toggle-button">
         <span class="sr-only">Toggle navigation</span>
       </a>
       <!-- Navbar Right Menu -->
@@ -77,7 +77,7 @@
           <!-- Tasks Menu -->
           <li class="dropdown tasks-menu" id="system-messages">
             <!-- Menu Toggle Button -->
-            <a href="#" class="dropdown-toggle" data-toggle="control-sidebar">
+            <a href="#" class="dropdown-toggle" data-bs-toggle="control-sidebar">
               <i id="ajax-activity" class="fa fa-refresh"></i>
               <span class="label label-danger"></span>
             </a>
@@ -86,7 +86,7 @@
           <!-- User Account Menu -->
           <li class="dropdown user user-menu">
             <!-- Menu Toggle Button -->
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown">
               <!-- The user image in the navbar-->
               	{% include '@EMSAdminUI/bootstrap5/elements/user-image.html.twig' with {
 					'class': 'user-image'
@@ -165,7 +165,7 @@
 		  <div class="modal-dialog" role="document">
 		    <div class="modal-content">
 		      <div class="modal-header">
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 		        <h4 class="modal-title" id="myModalOutOfSync">
 							<strong>Out of sync</strong>
 				</h4>
@@ -186,7 +186,7 @@
 		  <div class="modal-dialog" role="document">
 		    <div class="modal-content">
 		      <div class="modal-header">
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 		        <h4 class="modal-title" id="myModalNotifications">
 							<strong>Notifications</strong>
 				</h4>
@@ -218,8 +218,8 @@
   <aside class="control-sidebar control-sidebar-dark">
     <!-- Create the tabs -->
     <ul class="nav nav-tabs nav-justified control-sidebar-tabs">
-      <li class="active"><a href="#control-sidebar-home-tab" data-toggle="tab"><i class="fa fa-home"></i></a></li>
-      <li><a href="#control-sidebar-settings-tab" data-toggle="tab"><i class="fa fa-terminal"></i></a></li>
+      <li class="active"><a href="#control-sidebar-home-tab" data-bs-toggle="tab"><i class="fa fa-home"></i></a></li>
+      <li><a href="#control-sidebar-settings-tab" data-bs-toggle="tab"><i class="fa fa-terminal"></i></a></li>
     </ul>
     <!-- Tab panes -->
     <div class="tab-content">
@@ -261,7 +261,7 @@
         <div class="progress progress-striped active" style="margin-bottom:0;"><div class="progress-bar" style="width: 100%"></div></div>
       </div>
 {#       <div class="modal-footer">#}
-{#         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>#}
+{#         <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>#}
 {#         <button type="button" class="btn btn-primary">Send message</button>#}
 {#       </div>#}
     </div>
