--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/components/json_menu_nested/template.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/components/json_menu_nested/template.twig
@@ -122,7 +122,7 @@
     {% set menuMore = template.block('jmn_button_item_more_menu', _context)|raw  %}
     {% if menuMore|length > 0 %}
         <div class="btn-group btn-group-sm">
-            <button type="button" class="btn btn-sm btn-default dropdown-toggle jmn-dropdown-more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+            <button type="button" class="btn btn-sm btn-default dropdown-toggle jmn-dropdown-more" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
             <ul class="dropdown-menu pull-right">
                 {{ menuMore|raw }}
             </ul>
@@ -143,7 +143,7 @@
 
     {% if addNodes|length > 0 or addMenu|length > 0 %}
         <div class="btn-group btn-group-sm">
-            <button type="button" class="btn btn-sm btn-default dropdown-toggle jmn-dropdown jmn-dropdown-add" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button type="button" class="btn btn-sm btn-default dropdown-toggle jmn-dropdown jmn-dropdown-add" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 {{ buttonLabel|default('Add') }}
             </button>
             <ul class="dropdown-menu pull-right">
@@ -181,13 +181,13 @@
         {% if form is defined  %}
             <button id="ajax-modal-submit" class="btn btn-sm btn-primary"><i class="fa fa-save"></i>&nbsp;Save</button>
         {% endif %}
-        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-sm btn-default" data-bs-dismiss="modal">Cancel</button>
     </div>
 {%- endblock jmn_modal_footer -%}
 
 {%- block jmn_modal_view -%}
     {%- if dataFields -%}
-        {%- import "@EMSCore/macros/data-field-type.html.twig" as macros -%}
+        {%- import "@EMSAdminUI/bootstrap5/macros/data-field-type.html.twig" as macros -%}
         {{ macros.renderDataField(dataFields, rawData, false, []) }}
     {%- else -%}
         <p class="text-red">{{ 'view.data.json-menu-nested-json-preview.field-type-not-found'|trans }}</p>
