--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/i18n/index.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/i18n/index.html.twig
@@ -3,7 +3,7 @@
 
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><i class="fa fa-language"></i> {{ 'I18N'|trans }}</li>
+		<li class="breadcrumb-item"><i class="fa fa-language"></i> {{ 'I18N'|trans }}</li>
    	</ol>
 {% endblock %}
 
@@ -58,7 +58,7 @@
 								<td class="">{{ loop.index+((page-1)*paging_size) }}.</td>
 								<td class="">{{ i18n.identifier }}</td>
 								<td>
-									<a data-toggle="modal" data-target="#Id{{ i18n.id }}Modal" class="btn btn-sm btn-success">
+									<a data-bs-toggle="modal" data-bs-target="#Id{{ i18n.id }}Modal" class="btn btn-sm btn-success">
 										<i class="fa fa-eye"></i>&nbsp;
 										{{ i18n.content|length }}
 									</a>
@@ -103,7 +103,7 @@
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal"
+						<button type="button" class="close" data-bs-dismiss="modal"
 							aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
