--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/revision/json/json_menu_nested.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/revision/json/json_menu_nested.html.twig
@@ -119,7 +119,7 @@
                     data-item-id="{{ item.id }}"
                     data-node-id="{{ node.id }}"
                     data-level="{{ level }}"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fa fa-pencil"></i>&nbsp;<span>{{ 'field_type.json_menu_editor.edit'|trans }}</span>
             </button>
         </div>
@@ -162,7 +162,7 @@
     {%- if 'add' in node.actions and node.addNodes|length > 0 and (def.maxDepth == 0 or level < def.maxDepth)  -%}
         <div class="btn-group btn-group-sm">
             <button type="button" class="btn btn-sm btn-default dropdown-toggle json-menu-nested-add-button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="fa fa-plus"></span>
                 {{ 'field_type.json_menu_editor.add'|trans }}
                 <span class="caret"></span>
@@ -190,7 +190,7 @@
     {%- set position = position|default('item') -%}
     {% if 'copy' in node.actions or 'paste' in node.actions %}
         <div class="btn-group">
-            <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+            <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="true">
                 <span class="fa fa-ellipsis-h"></span>
             </button>
             <ul class="dropdown-menu {{ 'item' == position ? 'pull-right' }}">
@@ -230,7 +230,7 @@
 
 {% block modalPreview %}
     {%- if dataFields -%}
-        {%- import "@EMSCore/macros/data-field-type.html.twig" as macros -%}
+        {%- import "@EMSAdminUI/bootstrap5/macros/data-field-type.html.twig" as macros -%}
         {{ macros.renderDataField(dataFields, rawData, false, []) }}
     {%- else -%}
         <p class="text-red">{{ 'view.data.json-menu-nested-json-preview.field-type-not-found'|trans }}</p>
@@ -243,13 +243,13 @@
 {% block modalSaveFooter %}
     <div class="pull-right">
         <button id="ajax-modal-submit" class="btn btn-sm btn-primary"><i class="fa fa-save"></i>&nbsp;Save</button>
-        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-sm btn-default" data-bs-dismiss="modal">Cancel</button>
     </div>
 {% endblock %}
 
 {% block modalFooterClose %}
     <div class="pull-left">
-        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-sm btn-default" data-bs-dismiss="modal">Close</button>
     </div>
 {% endblock %}
 
