ref: Media Library Component

--- a/EMS/admin-ui-bundle/assets/css/admin-lte/adminlte.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/adminlte.scss
@@ -18,9 +18,15 @@
 @import "variables-alt";
 @import "mixins";
 
+// Parts
+// ---------------------------------------------------
 @import "parts/core";
 @import "parts/components";
 //@import "parts/extra-components";
 @import "parts/pages";
 //@import "parts/plugins";
 @import "parts/miscellaneous";
+
+// EMS Modules
+// ---------------------------------------------------
+@import "../core/components/media_library";
