ref: jsonNestedMenu component

--- a/EMS/admin-ui-bundle/assets/css/admin-lte/adminlte.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/adminlte.scss
@@ -30,3 +30,4 @@
 // EMS Modules
 // ---------------------------------------------------
 @import "../core/components/media_library";
+@import "../core/components/json_menu_nested";
